# mmo-server

./: .gitignore  README.md
server-code/: .clang-tidy  .gdbinit_txt  CMakeLists.txt  README.md  build.sh  build_and_check.sh  build_remote_imgui_client.bat  create_gdbinit.sh  git_config.sh  install-git-lfs.sh  make_proj.bat  releasebuild.sh  releasebuild_withasan.sh
server-code/core/: CMakeLists.txt
server-code/core/comm/: CMakeLists.txt
server-code/core/comm/basecode/: AttempUtil.h  BaseCode.h  BaseType.h  CMakeLists.txt  CallStackDumper.cpp  CallStackDumper.h  CheckUtil.h  FileLock.cpp  FileUtil.h  GlobalSetting.cpp  GlobalSetting.h  IntUtil.h  LockfreeQueue.h  LogImpl.cpp  LogImpl.h  LoggingMgr.cpp  LoggingMgr.h  LoopHelper.h  MemoryHelp.cpp  MemoryHelp.h  Misc.h  Noncopyable.h  ObjectHeap.cpp  ObjectHeap.h  SegvCatch.cpp  Singleton.h  SkipList.h  StaticHash.h  StaticReflection.h  StaticReflectionV2.h  StringAlgo.cpp  StringAlgo.h  T_GameDataMap.h  Thread.cpp  Thread.h  TimeUtil.cpp  TimeUtil.h  TupleHelper.h  backward.hpp  consistent_hasher.h  (+2 more)
server-code/core/comm/basecode/math/: GameMath.cpp  GameMath.h  MathDef.h  Matrix3.cpp  Matrix3.h  Matrix4.h  Quaternion.h  Vector2.h  Vector3.h
server-code/core/comm/crypto_comm/: CMakeLists.txt  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h  NormalCrypto.cpp  NormalCrypto.h
server-code/core/comm/game_event/: CMakeLists.txt  EventEntry.cpp  EventEntry.h  EventManager.cpp  EventManager.h
server-code/core/comm/message_route/: MessagePort.cpp  MessagePort.h  MessageRoute.cpp  MessageRoute.h
server-code/core/comm/mydb/: CMakeLists.txt  DB2PB.h  DBField.cpp  DBField.h  DBFieldInfo.cpp  DBFieldInfo.h  DBRecord.cpp  MysqlConnection.cpp  MysqlConnection.h  MysqlStmt.h  MysqlTableCheck.h
server-code/core/comm/network/: CMakeLists.txt  EventEntry.cpp  EventManager.cpp  EventManager.h  MsgProcessRegister.h  NetClientSocket.cpp  NetClientSocket.h  NetEventHandler.h  NetMSGProcess.cpp  NetMSGProcess.h  NetServerSocket.cpp  NetServerSocket.h  NetSocket.cpp  NetSocket.h  NetworkDefine.h  NetworkMessage.cpp  NetworkMessage.h  NetworkService.cpp  NetworkService.h  README.md
server-code/core/comm/pb_util/: CMakeLists.txt  DataPack.h  ProtobuffUtil.cpp  ProtobuffUtil.h
server-code/core/comm/remote_imgui/: CMakeLists.txt
server-code/core/comm/remote_imgui/imgui_comm/: CMakeLists.txt  IMDataToProto.cpp  IMDataToProto.h  IMGuiFrameData.cpp  IMGuiFrameData.h  IMGuiIOData.cpp  IMGuiIOData.h  IMGuiTextureMgr.h  imgui.proto
server-code/core/comm/remote_imgui/imgui_server/: CMakeLists.txt  RemoteIMGuiServer.cpp  RemoteIMGuiServer.h
server-code/core/comm/script/: CMakeLists.txt  ScriptManager.cpp  ScriptManager.h  lua_tinker.cpp  lua_tinker.h  lua_tinker_stackobj.h  pb_luahelper.h
server-code/core/proto/datapack/: CfgDataPack.proto
server-code/core/service/rpcservice_comm/: CMakeLists.txt
server-code/core/service/service_comm/: CMakeLists.txt  MonitorMgr.cc  MonitorMgr.h  ServiceComm.cpp  ServiceComm.h  ServiceDefine.h  protomsg_to_cmd.h
server-code/core/service_loader/: CMakeLists.txt  ServiceLoader.cpp  ServiceLoader.h  main.cpp
server-code/core/test/: CMakeLists.txt
server-code/core/test/consistent_hash_tester/: CMakeLists.txt  main.cpp
server-code/core/test/cryptopp_test/: CMakeLists.txt  main.cpp
server-code/core/test/db_tester/: CMakeLists.txt
server-code/core/test/remote_imgui_server_test/: CMakeLists.txt  main.cpp
server-code/core/test/static_reflection_test/: CMakeLists.txt  main.cpp
server-code/core/test/zset_tester/: CMakeLists.txt
server-code/core/tools/: CMakeLists.txt
server-code/core/tools/bttree_editor/: CMakeLists.txt  btree_editor.cpp  btree_editor.h  main.cpp
server-code/core/tools/bttree_editor/btree_node/: btnode.cpp  btnode.h
server-code/core/tools/bttree_editor/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp
server-code/core/tools/bttree_editor/imguifilesystem/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
server-code/core/tools/bttree_editor/imnode/: imnodes.cpp  imnodes.h
server-code/core/tools/cxx2lua/: CMakeLists.txt  main.cpp
server-code/core/tools/excel2pb/: CMakeLists.txt  main.cpp
server-code/core/tools/pbbin2json/: CMakeLists.txt  main.cpp
server-code/core/tools/pbbin2txt/: CMakeLists.txt  main.cpp
server-code/core/tools/protoc-gen-sql/: CMakeLists.txt  sql_code_generator.cpp
server-code/core/tools/remote_imgui_client/: CMakeLists.txt  RemoteIMGuiClient.cpp  RemoteIMGuiClient.h  main.cpp
server-code/core/tools/remote_imgui_client/imgui/: imgui_impl_opengl2.cpp
server-code/core/tools/sql2cpp/: CMakeLists.txt  main.cpp
server-code/core/tools/sqlurl/: CMakeLists.txt
server-code/src/: CMakeLists.txt
server-code/src/game_comm/: CMakeLists.txt
server-code/src/game_comm/gamemap/: GameMap.cpp  GameMap.h  GameMapDef.h  MapData.cpp  MapData.h  MapManager.cpp  MapManager.h  SceneBase.cpp  SceneBase.h  SceneID.h  SceneObject.cpp  SceneObject.h  SceneTree.cpp  SceneTree.h
server-code/src/game_comm/mydbtable/: gamedb.h
server-code/src/game_comm/mydbtable/db_proto/: gamedb.proto  globaldb.proto
server-code/src/game_comm/proto/: protomsg_to_cmd.cpp
server-code/src/game_comm/proto/server_msg/: server_side.proto
server-code/src/game_comm/remote_imgui/: CMakeLists.txt
server-code/src/game_comm/remote_imgui/imgui_comm/: CMakeLists.txt  IMDataToProto.cpp  IMGuiFrameData.cpp  IMGuiFrameData.h  IMGuiFrameDataWarp.h  IMGuiIOData.cpp  IMGuiIOData.h  IMGuiTextureMgr.h  imgui.proto
server-code/src/server_share/: GameEventDef.h  HateList.h  ScriptCallBackType.h
server-code/src/service/: CMakeLists.txt
server-code/src/service/global/guild_service/: CMakeLists.txt  (+2 more)
server-code/src/tools/: CMakeLists.txt
server-code/src/tools/db_check/: CMakeLists.txt  main.cpp
server-code/src/tools/merge-server/: CMakeLists.txt  main.cpp
server-code/src/tools/remote_imgui_client/: CMakeLists.txt  imgui_impl_opengl2.cpp  main.cpp
server-code/src/tools/robotclient/: CMakeLists.txt  RobotClient.cpp  RobotClient.h  RobotClientManager.cpp  RobotClientManager.h  main.cpp
(+292 files in other folders)
