#SET(CMAKE_BUILD_TYPE Debug)

ADD_SUBDIRECTORY(comm)
 
IF (NOT WIN32)
ADD_SUBDIRECTORY(proto)
ADD_SUBDIRECTORY(service)
ADD_SUBDIRECTORY(service_loader)

ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(test EXCLUDE_FROM_ALL)

ELSE()
ADD_SUBDIRECTORY(tools/remote_imgui_client)
ADD_SUBDIRECTORY(tools/bttree_editor)

endif()







