
ADD_SUBDIRECTORY(zone/socket_service)
ADD_SUBDIRECTORY(zone/world_service)
ADD_SUBDIRECTORY(zone/scene_service)
ADD_SUBDIRECTORY(zone/ai_service)
ADD_SUBDIRECTORY(zone/aoi_service)
ADD_SUBDIRECTORY(zone/market_service)
ADD_SUBDIRECTORY(zone/gm_service)
ADD_SUBDIRECTORY(zone/auth_service)
ADD_SUBDIRECTORY(zone/route_service)

ADD_SUBDIRECTORY(global/gmproxy_service)





